# pptx-editor-engine

./: .gitignore  PPTX_RENDERING_FIXES.md  README.md  index.html  package-lock.json  package.json  pptx_editor_project_proposal.md  rspack.config.js  tsconfig.json
.claude/: launch.json
rust-backend/: Cargo.toml
rust-backend/src/: main.rs
rust-engine/: Cargo.toml
rust-engine/src/: ast.rs  effects.rs  font_renderer.rs  image_renderer.rs  lib.rs  shape_renderer.rs  text_layout.rs
src/: demo-entry.ts  index.ts  pptx-parser.ts  pptx-style-resolver.ts  pptx-virtual-dom.ts  pptx-xml.ts  style.css
