[package]
name = "ppt-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.88"
js-sys = "0.3.65"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cosmic-text = "0.19"
percent-encoding = "2.3"
console_error_panic_hook = "0.1.7"

[dependencies.web-sys]
version = "0.3.65"
features = [
  "CanvasRenderingContext2d",
  "CanvasGradient",
  "Document",
  "DomMatrix",
  "HtmlCanvasElement",
  "HtmlImageElement",
  "ImageData",
  "TextMetrics",
  "Window",
  "console"
]
